DOCS: Describe granting native library access (#563)
* DOCS: Describe granting native library access

Documents --enable-native-access for classpath and module path setups, following the module names added in pipeline-java for 51Degrees/device-detection-java#476.

* FEAT: Name on-premise engine jar as an automatic module

JEP 472 checks JNI method binding against the module declaring the native methods, which is this package rather than pipeline.engines.fiftyone, so both names are needed. Documents granting native access on the classpath and the module path.

Implements #476.

* FEAT: Name the remaining device detection jars as modules

Adds Automatic-Module-Name to device-detection, device-detection.cloud and device-detection.shared. Only the on-premise engine needs a name for native access, but without a declared name the module system derives one from the file name, which changes if the artifact is renamed or shaded.

Implements #476.

* DOCS: Fix module path in the native access example

--module-path takes directories or jar files; the "*" wildcard is a
class-path-only feature of the launcher, so "mods/*" found nothing and
the command failed with FindException on the module named by
--add-modules.

---------

Co-authored-by: Eugene Dzhurinsky <justadreamer2007@gmail.com>